add index construction benchmark
Signed-off-by: Samuel Herman <sherman8915@gmail.com>